--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
   "dependencies": {
     "@react-navigation/native": "^6.1.7",
     "@react-navigation/native-stack": "^6.9.13",
-    "@testing-library/react-native": "^12.1.3",
+    "@reduxjs/toolkit": "^1.9.5",
     "expo": "~48.0.18",
     "expo-splash-screen": "~0.18.2",
     "expo-status-bar": "~1.4.4",
@@ -22,18 +22,21 @@
     "react": "18.2.0",
     "react-native": "0.71.8",
     "react-native-mmkv": "^2.10.1",
+    "react-native-reanimated": "^3.3.0",
     "react-native-safe-area-context": "^4.7.1",
     "react-native-screens": "^3.22.1",
     "react-navigation": "^4.4.4",
     "react-redux": "^8.1.1",
-    "redux-mock-store": "^1.5.4",
-    "redux-persist": "^6.0.0",
-    "redux-saga": "^1.2.3",
-    "redux-thunk": "^2.4.2"
+    "redux-persist": "^6.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
+    "@types/jest": "^29.5.3",
     "@types/react": "~18.0.14",
+    "@types/react-native": "^0.72.2",
+    "@testing-library/react-native": "^12.1.3",
+    "redux-mock-store": "^1.5.4",
+    "@types/redux-mock-store": "^1.0.3",
     "jest": "^29.6.1",
     "jest-expo": "^49.0.0",
     "typescript": "^4.9.4"
