--- a/package.json
+++ b/package.json
@@ -9,7 +9,10 @@
     "test": "jest --watchAll"
   },
   "jest": {
-    "preset": "jest-expo"
+    "preset": "jest-expo",
+    "moduleNameMapper": {
+      "^@/(.*)$": "<rootDir>/src/$1"
+    }
   },
   "dependencies": {
     "@react-navigation/native": "^6.1.7",
@@ -27,6 +30,7 @@
     "react-native-screens": "^3.22.1",
     "react-navigation": "^4.4.4",
     "react-redux": "^8.1.1",
+    "react-test-renderer": "^18.2.0",
     "redux-persist": "^6.0.0"
   },
   "devDependencies": {
@@ -39,6 +43,7 @@
     "jest": "^29.6.1",
     "jest-expo": "^49.0.0",
     "redux-mock-store": "^1.5.4",
+    "tsconfig-paths-jest": "^0.0.1",
     "typescript": "^4.9.4"
   },
   "private": true
