--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "android": "expo run:android",
     "ios": "expo run:ios",
     "web": "expo start --web",
-    "test": "jest --watchAll"
+    "test": "jest --watchAll",
+    "lint": "npx eslint ./src"
   },
   "jest": {
     "preset": "jest-expo",
@@ -18,6 +19,8 @@
     "@react-navigation/native": "^6.1.7",
     "@react-navigation/native-stack": "^6.9.13",
     "@reduxjs/toolkit": "^1.9.5",
+    "@typescript-eslint/parser": "^6.1.0",
+    "eslint": "^8.45.0",
     "expo": "~48.0.18",
     "expo-splash-screen": "~0.18.2",
     "expo-status-bar": "~1.4.4",
@@ -40,6 +43,9 @@
     "@types/react": "~18.0.14",
     "@types/react-native": "^0.72.2",
     "@types/redux-mock-store": "^1.0.3",
+    "@typescript-eslint/eslint-plugin": "^6.1.0",
+    "eslint-plugin-react": "^7.33.0",
+    "eslint-plugin-react-hooks": "^4.6.0",
     "jest": "^29.6.1",
     "jest-expo": "^49.0.0",
     "redux-mock-store": "^1.5.4",
